*ortp-9999 (12 Jul 2015)

  12 Jul 2015; Guillaume Horel <guillaume.horel@gmail.com> +ortp-9999.ebuild:
  net-libs/ortp: add live version

*ortp-0.24.2 (11 May 2015)

  11 May 2015; Guillaume Horel <guillaume.horel@gmail.com> +ortp-0.24.2.ebuild,
  -ortp-0.24.1.ebuild:
  net-libs/ortp: version bump