@@ -1,1 +1,1 @@
-DIST ortp-0.24.2.tar.gz 527729 SHA256 201116f76fedd293e4192eb6e66e056048bc3ab626eb3655abf7e14420c54abd SHA512 8c3f1531ff0226092519c4e63fd9173cb07aac7366bc8f012e1bfe5a138542b050e0a34fa8cf9d9cf224d90ec5af6644baf3296d37e6d0cc005a35a31bc46680 WHIRLPOOL 22a4347e9e0d1327c0e25a61eb853ead5a4e4f25e3a472d31a1bd8e5f313ca83d4d4880a9a9086e1d0d1db0b41d9705d5fa69e68dacb0bb1f4d754fe71ce1ef1
+DIST ortp-0.25.0.tar.gz 565836 SHA256 0deb826b79b1fd329f7638821d5439dc343bc55bb122daa6c90d19116cfe8d9a SHA512 8e4ee626e644983d3839f5f0a300ba6781177f2b8d67c843270fc9db1486ee6c29baad4b95168021ac8cfb85f56adbfbc424e297a6ad3704071a01cf8871bef9 WHIRLPOOL 8030854aa62efdb2e7b109094b894170f397961b6ffcc6d583a2e562a06cb334838a2b26193e9fb4d4366c74a2630b58f7ea38a9c722548273379e0757018f17
